# netlab

./: ARCHITECTURE_V1.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LOAD_TEST.md  README.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
crates/cli/: CHANGELOG.md  Cargo.toml  README.md  app.rc  build.rs
crates/cli/src/: main.rs
crates/engine/: CHANGELOG.md  Cargo.toml  README.md
crates/engine/src/: lib.rs
crates/engine/src/conn/: mod.rs
crates/engine/src/metrics/: mod.rs
crates/engine/src/net_debug/: mod.rs
crates/engine/src/protocol/: mod.rs
crates/engine/src/proxy/: mod.rs
crates/engine/src/scenario/: load_test.rs
crates/engine/src/scheduler/: mod.rs
crates/engine/src/socks5/: mod.rs
crates/tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/icons/: icon.icns
crates/tauri/src/: init.rs
crates/tauri/src/invokes/: load_test.rs  proxy.rs
crates/tauri/src/modules/: mod.rs  tray.rs
crates/tauri/src/utils/: mod.rs
docs/: METRICS.md
scripts/: build-netlab-cli.ps1  build-netlab-cli.sh  count-code-lines.ts
src/: main.tsx  routes.tsx
src-tauri/: CHANGELOG.md  Cargo.toml  README.md  Tauri.dev.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/invokes/: app_log.rs  mod.rs  network_debug.rs  socks5.rs
src-tauri/src/modules/: logger.rs
src-tauri/src/types/: mod.rs
src/components/common/: InitializationError.tsx
src/components/common/CustomSelect/: CustomSelect.styles.ts  CustomSelect.tsx
src/components/common/Input/: Input.styles.ts  Input.tsx
src/components/layout/: Menus.tsx
src/constants/: index.ts  menuItems.ts
src/contexts/: AppProvider.tsx  ModalContext.tsx  ThemeContext.tsx
src/features/BytesConverter/: ByteUnitInfo.tsx  BytesConverter.styles.ts  BytesConverter.tsx
src/features/LoadTest/: LoadTest.styles.ts  LoadTest.tsx
src/features/NetworkDebug/: NetworkDebug.styles.ts  NetworkDebug.tsx
src/features/ProxyMonitor/: ProxyMonitor.styles.ts  ProxyMonitor.tsx
src/features/Settings/: LanguageSettings.tsx  SettingsModal.tsx
src/locales/: en.json  ja.json  zh.json
src/pages/: _app.tsx  index.tsx
src/pages/help/: CheckUpdate.tsx  about.tsx
src/pages/logCenter/: LogWindow.styles.ts  LogWindow.tsx
src/pages/tools/: bytes.tsx  loadtest.tsx  network.tsx  proxy.tsx
src/utils/: config.ts  dateHelpers.ts  dragging.ts  fs.ts
