[package]
name = "engine"
version = "0.1.0-alpha.1"
edition.workspace = true

[dependencies]
bytes = "1.10.1"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "server", "http1", "http2"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["native-tokio", "http1", "http2", "aws-lc-rs"] }
hyper-util = { version = "0.1.19", features = ["client-legacy", "http1", "http2", "tokio"] }
rustls = { version = "0.23.35", default-features = false, features = ["aws_lc_rs"] }
tokio = { workspace = true }
